# Parcial-2do-Corte

./: CMakeLists.txt  README.md
src/: Estudiante.cpp  Estudiante.h  main.cpp
